# Rust-Snake

./: Cargo.toml  Index.html  README.md
data/: player_data.json  settings.json
src/: lib.rs  main.rs  resources.rs
src/game/: arena.rs  death_screen.rs  food.rs  highscore.rs  mod.rs  snake.rs
src/menu/: components.rs  mod.rs
