[package]
name = "snake"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7" }
#features = ["dynamic"]

rand = "0.8.3"
winit = "0.26.1"
image = "0.23.14"

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

iyes_loopless = "0.6.1"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[build-dependencies]
embed-resource = "1.4"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
#[profile.dev.package."*"]
#opt-level = 3